--- a/backend/techMarket/src/main/resources/application.properties
+++ b/backend/techMarket/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/techmarket
-spring.datasource.username=postgres
-spring.datasource.password=password
+// database connections, deleted because of the password protection
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
